--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.90.20",
     "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.2.0",
+    "@vercel/kv": "^3.0.0",
     "@zoralabs/coins-sdk": "^0.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
